--- a/Odd-Even.html
+++ b/Odd-Even.html
@@ -10,7 +10,7 @@
 <button onclick="Random()">Try it</button>
 <p id="demo"></p>
 <script>
-    function random() {
+    function Random() {
 
   var x = document.getElementById("demo"),
       randomNum = Math.floor((Math.random() * 100) + 1);
