--- a/Even-Odd.html
+++ b/Even-Odd.html
@@ -5,12 +5,12 @@
         <script src="Even-odd.js"></script>
     </head>
     <body>
-        <h2>Odd or Even/h2>
+        <h2>Odd/Even</h2>
         <form >
             <input type="number" id="num" name="num" min="0" max="100" />
-            <input type="button" value="Odd or Even" onclick="OddEven()" name="find" />
-            <div style="margin-top: 10px;color:blue;" id="Even"></div>
-            <div style="margin-top: 10px;color:red;" id="Odd"></div>
+            <input type="button" value="Even/Odd" onclick="EvenOdd()" name="find" />
+            <div style="margin-top: 5px;color:blue;" id="Even"></div>
+            <div style="margin-top: 5px;color:red;" id="Odd"></div>
         </form>
     </body>
 </html>
